# viking-neat-mcts

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: agent.rs  lib.rs  simulation.rs
game/: Cargo.toml
game/src/: board.rs  game.rs  lib.rs  piece.rs  player.rs
