[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convolutions-rs = "0.3.4"
game = { version = "0.1.0", path = "../game" }
itertools = "0.11.0"
mcts = "0.3.0"
ndarray = "0.15.6"
rand = { version = "0.8.5", features = ["small_rng"] }
rustneat = "0.2.1"
